--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -36,7 +36,7 @@
                 <h3 id="userNameText" onclick="location.href='projects.html'">Student</h3>
             </div>
         </div>
-          <button id="logOut" class="logoutButton" onclick="location.href='login.html'">
+          <button id="logOut" class="logoutButton" onclick="location.href='registration.html'">
             <font class="sender">Выйти</font>
           </button>
     </div>
