Обратить внимание, что теперь нельзя выйти в workenv предварительно не залогинившись. Поэтому настройте сервак

--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -33,7 +33,7 @@
          <div class="icondiv">
             <div id="icon"  onclick="location.href='projects.html'"></div>
             <div class="userTextDiv" id="userName">
-                <h3 id="userNameText" onclick="location.href='projects.html'">Student</h3>
+                <h3 id="userNameText">Student</h3>
             </div>
         </div>
           <button id="logOut" class="logoutButton" onclick="location.href='registration.html'">
