--- a/pg/projects.html
+++ b/pg/projects.html
@@ -26,15 +26,13 @@
     </div>
     <div class="maindiv">
         <div class="leftDivBut">
-            <div style="padding: 5%;">
-                <div class="gorizont">
+            <div style="padding: 6%;">
                     <div class="selects panel panel-default">
                         <div class="panel-heading">
                             <h3 class="panel-title">
                             Проекты:
                             </h3>
                         </div>
-                    </div>
                 </div>
                 <div class="gorizont">
                 <div class="inputs panel panel-default">
@@ -48,23 +46,16 @@
             </div>
         </div>
     <div class="rightDiv">
-        <div style="padding: 2%;">
-                <div class="gorizont">
-                    <div class="well well-small">
-                            <h3 class="panel-title full-screen">
+         <div style = "padding: 1%"></div>
+                    <div class="well well-small padd">
+                            <h3 class="panel-title full-screen ">
                             Личная информация:
                                 <button style="margin-left: 52%;" type="button" class="btn btn-default btn-small">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                 </button>
                             </h3>
                         </div>
-                    </div>
-            </div>
-                <div class="gorizont">
-
-                    <div class= "full-screen">
-                        <div class = "padd">
-                        <div class="choice panel panel-body panel-default">
+                        <div class="choice panel panel-body panel-default padd">
                             <h4>
                                 Группа: ПИ-13-1
                             </h4>
@@ -75,39 +66,26 @@
                                 Работает над проектом: cache
                             </h4>
                         </div>
-                      </div>
-                    </div>
-                </div>
-
-
-            <div class = "padd">
-                <div class="gorizont">
-                    <div class="well well-small">
+             <div style = "padding: 1%"></div>
+                    <div class="well well-small padd">
                             <h3 class="panel-title full-screen">
                             Преподаватели:
-                                 <button style="margin-left: 54.5%;" type="button" class="btn btn-default btn-small">
+                                 <button style="margin-left:54.5%;" type="button" class="btn btn-default btn-small">
                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                                 </button>
                             </h3>
                         </div>
-                    </div>
-                </div>
-            <div class="gorizont">
-                <div class= "full-screen">
-                        <div class = "padd">
-                        <div class="choice panel panel-body panel-default">
-                            <h4>
-                                Петросян
-                            </h4>
-                            <h4>
-                                Петросян
-                            </h4>
-                        </div>
-                      </div>
-                    </div>
+                <div class="choice panel panel-body panel-default padd">
+                        <h4>
+                            Петросян
+                        </h4>
+                        <h4>
+                          Петросян
+                       </h4>
+               </div>
+
                 </div>
             </div>
-        </div>
     <div class="footerDiv">
     </div>
 </body>
