--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/diagram.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/joint.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="../js/angular.min.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
@@ -25,6 +26,8 @@
     <script src="../js/controllers/object-diagram-controller.js "></script>
     <script src="../js/controllers/use-case-controller.js "></script>
     <script src="../js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
 </head>
 
 <body ng-app="cache" >
@@ -58,7 +61,7 @@
 			        <h5 class="tabName">ИП</h5>
 		        </div>
                <div name="tab" class="tab">
-			        <h5 class="tabName">Statistic</h5>
+			        <h5 class="tabName">Статистика</h5>
 		        </div>
                <div name="tab" class="tab">
 			        <h5 class="tabName">Отчет</h5>
@@ -243,13 +246,150 @@
 		    </div>
 		</div>
 	   </div>
-            <div id="div4" name="contentDiv">4</div>
-            <div id="div5" name="contentDiv">5</div>
-            <div id="div6" name="contentDiv">6</div>
-            <div id="div7" name="contentDiv">7</div>
+        <div id="div4" name="contentDiv">
+                <div class="btn-group buttonsBar">
+                    <button class="btn btn-default"> Поиск </button>
+                    <button class="btn btn-default"> Сортировки </button>
+                    <button class="btn btn-default"> Фильтрации </button>
+                </div>
+            <div class="gorizont">
+                <div  class="panel panel-default namePanel " >
+                    <div class="panel-heading ">
+                        <h3 class="panel-title h2">Объект</h3>
+                    </div>
+                    <select size="11" multiple class="form-control input-lg sel">
+                        <option>Movies </option>
+                        <option>Games</option>
+                        <option>Books</option>
+                        <option>Newspapers</option>
+                        <option>Songs</option>
+                    </select>
+                    <div style="margin:0 auto;margin-left:32%;" class="choice panel panel-body ">
+                        <button type="button" class="btn btn-default btn-small ">
+                             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </button>
+                    </div>
+                </div>
+                <div class="panel panel-default detailsPanel ">
+                    <div class="panel-heading ">
+                        <h3 class="panel-title">Атрибуты по которым сортировка</h3>
+                    </div>
+                            <h4>
+                                <div class="gorizont al">
+                                    Атрибут1
+                                <button style="margin-left: 83%;border: none;"  type="button" class="btn btn-default btn-small ">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </button>
+                                 </div>
+                            </h4>
+                            <h4 class = "al">
+                                Атрибут2
+                            </h4>
+                            <h4 class = "al">
+                               Атрибут3
+                            </h4>
+                         <div style = "padding: 10%"></div>
+                        <div class="gorizont">
+                            <input type="text" class="form-control" placeholder="Объект…">
+                            <button type="button" class="btn btn-default btn-small ">
+                                        <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+                                    </button>
+                            </div>
+
+                </div>
+            </div>
+        </div>
+            <div id="div5" name="contentDiv">
+                <div class="gorizont">
+                <div  class="panel panel-default namePanel " >
+                    <div class="panel-heading ">
+                        <h3 class="panel-title h2">Название</h3>
+                    </div>
+                    <select size="13" multiple class="form-control input-lg sel">
+                        <option>Movies </option>
+                        <option>Games</option>
+                        <option>Books</option>
+                        <option>Newspapers</option>
+                        <option>Songs</option>
+                    </select>
+                    <div style="margin:0 auto;margin-left:32%;" class="choice panel panel-body ">
+                        <button type="button" class="btn btn-default btn-small ">
+                             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                        </button>
+                    </div>
+                </div>
+                <div class="panel panel-default detailsPanel ">
+                    <div class="panel-heading ">
+                        <h3 class="panel-title">Детали</h3>
+                    </div>
+                        <h4 class = "al">
+                        Название:
+                        </h4>
+                     <input  type="text" class="form-control al" placeholder="Какое-то название…">
+                            <h4>
+                            <div style = "padding: 4%"></div>
+                                <div class="gorizont al">
+                                Атрибут1
+                                <button style="margin-left: 83%;border: none;"  type="button" class="btn btn-default btn-small ">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </button>
+                                 </div>
+                            </h4>
+                            <h4 class = "al">
+                                Атрибут2
+
+                            </h4>
+                            <h4 class = "al">
+                               Атрибут3
+
+                            </h4>
+
+                         <div style = "padding: 2%"></div>
+                        <div class="gorizont">
+                            <input type="text" class="form-control" placeholder="Объект…">
+                            <button type="button" class="btn btn-default btn-small ">
+                                        <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+                                    </button>
+                            </div>
+
+                        </div>
+                    </div>
+            </div>
+            <div id="div6" name="contentDiv">
+                Отчеты то же самое,что и статистики
+            </div>
+            <div id="div7" name="contentDiv">
+                <div class="gorizont alBig">
+                    <h4 >Рез. атрибут:</h4>
+                       <div  class="btn-group">
+                      <button style = "margin-left: 100%" type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
+                          Объект
+                          <span class="caret"></span>
+                        </button>
+                        <ul style = "margin-left: 70%" class="dropdown-menu">
+                          <li><a href="#">Пункт 1</a></li>
+                          <li><a href="#">Пункт 2</a></li>
+                          <li><a href="#">Пункт 3</a></li>
+                       </ul>
+                        </div>
+                        <div  class="btn-group">
+                      <button style = "margin-left: 200%" type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
+                          Атрибут
+                          <span class="caret"></span>
+                        </button>
+                        <ul style = "margin-left: 170%" class="dropdown-menu">
+                          <li><a href="#">Пункт 1</a></li>
+                          <li><a href="#">Пункт 2</a></li>
+                          <li><a href="#">Пункт 3</a></li>
+                       </ul>
+                    </div>
+                </div>
+            </div>
             <div id="div8" name="contentDiv">8</div>
         </div>
+
     </div>
+
     <!-- Footer -->
     <div class="footerDiv">
         <div class="file_upload">
