--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -76,6 +76,52 @@
         </div>
         <div>
             <div id="pages-container" class="pages-container"></div>
+            <div id="objects-container" class="objects-container">
+            <div class="gorizont">
+                       <div class="selects panel panel-default">
+                        <!--<div class="panel-heading">
+                            <h3 class="panel-title">
+                            Объекты
+                            </h3>
+                        </div>-->
+                        <div class="panel-body">
+                            <select class="list" size="5" id="List1" onclick="refreshAttr();">
+                            </select>
+                        </div>
+                    </div>
+                    <div class="selects panel panel-default">
+                        <!--<div class="panel-heading">
+                            <h3 class="panel-title">
+                            Атрибуты
+                            </h3>
+                        </div>-->
+                        <div class="panel-body">
+                            <select class="list" size="5" id="List2">
+                            </select>
+                        </div>
+                    </div>
+
+                </div>
+                    <div class="gorizont">
+                    <div class="inputs panel panel-default">
+                       <div style="background-color: #fff; padding: 0; float:left;" class="panel-heading">
+                        <textarea class="textareas" id="wordTextBox" cols="25" rows="1" ></textarea>
+                        </div>
+                        <div style="padding:0;" class="panel-body">
+                        <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="in List" onclick="addObj();">
+                        </div>
+                    </div>
+                    <div class="inputs panel panel-default">
+                       <div style="background-color: #fff; padding: 0; float:left;" class="panel-heading">
+                        <textarea class="textareas" id="attrBox" cols="25" rows="1" ></textarea>
+                        </div>
+                        <div style="padding:0;" class="panel-body">
+
+                        <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="AttrInList" onclick="addAttr();">
+                        </div>
+                    </div>
+                </div>
+        </div>
             <!--<div>
                 <div class="gorizont">
                     <div class="selects panel panel-default">
