--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="../css/diagram.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/joint.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="../js/angular.min.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
@@ -22,11 +21,15 @@
     <script src="../js/concept.js" type="text/javascript"></script>
     <script src="../js/app.js" type="text/javascript"></script>
     <script src="../js/draw.js" type="text/javascript"></script>
+    <script src="../js/bootstrap.min.js"></script>
+
     <script src="../js/controllers/er-controller.js" type="text/javascript"></script>
     <script src="../js/controllers/object-diagram-controller.js "></script>
     <script src="../js/controllers/use-case-controller.js "></script>
-    <script src="../js/bootstrap.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+	<script src="../js/services/link-manipulation-service.js"></script>
+	<script src="../js/services/drag-and-drop-service.js"></script>
+	<script src="../js/services/diagram-service.js"></script>
 
 </head>
 
@@ -175,8 +178,8 @@
 				<h3 class="panel-title">Функциональная модель</h3>
 		    </div>
 			<div id="functional-tools" class="figuresBar panel panel-default">
-				<input type="button" ng-mousedown="initActor()" value="Актер" class="btn btn-default actor">
-				<input type="button" ng-mousedown="initService()" value="Сервис" class="btn btn-default service">
+				<input type="button" value="Актер" class="btn btn-default actor">
+				<input type="button" value="Сервис" class="btn btn-default service">
 		   </div>
 		    <div id="functional-model" class="panel-body" ng-click="closeOptions()">
 			</div>
