--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -492,8 +492,8 @@
                                 </button>
             </div>
             <div class="panel panel-default constraintPanel " width="80%">
-               <div class="constrHead">
-                <div  class="btn-group">
+               <div class="gorizont">
+                <div  class="btn-group"  style="margin-top:2%;">
                       <button style = "margin-left: 200%" type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
                           Объект
                           <span class="caret"></span>
@@ -504,7 +504,7 @@
                           <li><a href="#">Пункт 3</a></li>
                        </ul>
                         </div>
-                        <div  class="btn-group">
+                        <div  class="btn-group"  style="margin-top:2%;">
                       <button style = "margin-left: 300%" type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
                           Атрибут
                           <span class="caret"></span>
@@ -526,7 +526,7 @@
                     Ограничение:
                     </div>
                     <div class="constraint">
-                    <textarea class="textareas" id="constrBox" cols="45" rows="5" ></textarea>
+                    <textarea class="textareas" id="constrBox" cols="65" rows="5" ></textarea>
                     </div>
                     </div>
             </div>
