--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -381,13 +381,21 @@
                                 </button>
                                  </div>
                             </h4>
-                            <h4 class = "al">
+                            <h4>
+                                <div class="gorizont al">
                                 Атрибут2
-
+                                <button style="margin-left: 83%;border: none;"  type="button" class="btn btn-default btn-small ">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </button>
+                                 </div>
                             </h4>
-                            <h4 class = "al">
-                               Атрибут3
-
+                            <h4>
+                                <div class="gorizont al">
+                                Атрибут3
+                                <button style="margin-left: 83%;border: none;"  type="button" class="btn btn-default btn-small ">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </button>
+                                 </div>
                             </h4>
 
                          <div style = "padding: 2%"></div>
@@ -437,13 +445,21 @@
                                 </button>
                                  </div>
                             </h4>
-                            <h4 class = "al">
+                            <h4>
+                                <div class="gorizont al">
                                 Атрибут2
-
+                                <button style="margin-left: 83%;border: none;"  type="button" class="btn btn-default btn-small ">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </button>
+                                 </div>
                             </h4>
-                            <h4 class = "al">
-                               Атрибут3
-
+                            <h4>
+                                <div class="gorizont al">
+                                Атрибут3
+                                <button style="margin-left: 83%;border: none;"  type="button" class="btn btn-default btn-small ">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </button>
+                                 </div>
                             </h4>
 
                          <div style = "padding: 2%"></div>
@@ -458,8 +474,9 @@
                     </div>
             </div>
             <div id="div7" name="contentDiv">
+               <div class="panel panel-default">
                 <div class="gorizont alBig">
-                    <h4 >Рез. атрибут:</h4>
+                      <h4 >Рез. атрибут:</h4>
                        <div  class="btn-group">
                       <button style = "margin-left: 100%" type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
                           Объект
@@ -481,6 +498,62 @@
                           <li><a href="#">Пункт 2</a></li>
                           <li><a href="#">Пункт 3</a></li>
                        </ul>
+                    </div>
+                    </div>
+                    <div class="gorizont panel panel-default alBig">
+                    <h4>Атрибуты-источники:</h4>
+                    <table class="table">
+                        <tr>
+                            <th>
+                                Объект
+                            </th>
+                            <th>
+                                Атрибут
+                            </th>
+                            <th colspan="2">
+                                Переменная
+                            </th>
+                        </tr>
+                        <tr>
+                            <td>
+                               Объект 1
+                            </td>
+                            <td>
+                               Атрибут 1
+                            </td>
+                            <td>
+                                Х
+                            </td>
+                            <td>
+                                <button style="border: none;"  type="button" class="btn btn-default btn-small ">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                               Объект 1
+                            </td>
+                            <td>
+                               Атрибут 2
+                            </td>
+                            <td>
+                                Y
+                            </td>
+                            <td>
+                                <button style="border: none;"  type="button" class="btn btn-default btn-small ">
+                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                </button>
+                            </td>
+                        </tr>
+                    </table>
+
+                    </div>
+                    <div class="gorizont alBig ">
+                    <h4>Формула:</h4>
+                    <div>
+                    <input type="text" style="margin-left:35%; width:395%;"></input>
+                    </div>
                     </div>
                 </div>
             </div>
