--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -105,7 +105,7 @@
                     </div>
 
                 </div>
-                    <div class="gorizont"  ng-controller="ctrl">
+                    <div class="gorizont" id ="gor" ng-controller="ctrl">
                     <div class="inputs panel panel-default"  ng-model="company">
                        <div style="background-color: #fff; padding: 0; float:left;" class="panel-heading">
                         <textarea class="textareas" id="wordTextBox" cols="25" rows="1" ng-model="objec.name"></textarea>
@@ -120,7 +120,7 @@
                         </div>
                         <div style="padding:0;" class="panel-body">
 
-                        <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="AttrInList" onclick="addAttr();">
+                        <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="AttrInList" onclick = "addAttr()">
                         </div>
                     </div>
                 </div>
