--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -79,97 +79,84 @@
         </div>
         <div>
             <div id="pages-container" class="pages-container"></div>
-            <div id="objects-container" class="objects-container">
-            <div class="gorizont">
-                       <div class="selects panel panel-default">
-                        <!--<div class="panel-heading">
-                            <h3 class="panel-title">
-                            Объекты
-                            </h3>
+            <div id="objects-attribute-container" class="objects-attr-container" name="objContainer">
+                <div class="gorizont">
+                    <div class="selects panel panel-default">
+                    <!--<div class="panel-heading">
+                            <h3 class="panel-title">Объекты</h3>
                         </div>-->
                         <div class="panel-body">
-                            <select class="list" size="5" id="List1" onclick="refreshAttr();">
-                            </select>
+                            <select class="list" size="5" id="List1" onclick="refreshAttr();"></select>
                         </div>
                     </div>
                     <div class="selects panel panel-default">
-                        <!--<div class="panel-heading">
-                            <h3 class="panel-title">
-                            Атрибуты
-                            </h3>
+                    <!--<div class="panel-heading">
+                            <h3 class="panel-title">Атрибуты</h3>
                         </div>-->
                         <div class="panel-body">
-                            <select class="list" size="5" id="List2">
-                            </select>
+                            <select class="list" size="5" id="List2"></select>
                         </div>
                     </div>
-
                 </div>
-                    <div class="gorizont" id ="gor" ng-controller="ctrl">
+                <div class="gorizont" id ="gor" ng-controller="ctrl">
                     <div class="inputs panel panel-default"  ng-model="company">
-                       <div style="background-color: #fff; padding: 0; float:left;" class="panel-heading">
-                        <textarea class="textareas" id="wordTextBox" cols="25" rows="1" ng-model="objec.name"></textarea>
+                        <div style="background-color: #fff; padding: 0; float:left;" class="panel-heading">
+                            <textarea class="textareas" id="wordTextBox" cols="25" rows="1" ng-model="objec.name"></textarea>
                         </div>
                         <div style="padding:0;" class="panel-body">
-                        <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="in List" ng-click="create(objec)"; objec='';>
+                            <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="in List" ng-click="create(objec)"; objec='';>
                         </div>
                     </div>
                     <div class="inputs panel panel-default">
-                       <div style="background-color: #fff; padding: 0; float:left;" class="panel-heading">
-                        <textarea class="textareas" id="attrBox" cols="25" rows="1" ></textarea>
+                        <div style="background-color: #fff; padding: 0; float:left;" class="panel-heading">
+                            <textarea class="textareas" id="attrBox" cols="25" rows="1" ></textarea>
                         </div>
                         <div style="padding:0;" class="panel-body">
-
-                        <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="AttrInList" onclick = "addAttr()">
+                            <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="AttrInList" onclick = "addAttr()">
                         </div>
                     </div>
                 </div>
-        </div>
-            <!--<div>
+            </div>
+            <div id="relation-obj-container" class="objects-attr-container"  name="objContainer">
                 <div class="gorizont">
                     <div class="selects panel panel-default">
                         <div class="panel-heading">
-                            <h3 class="panel-title">
-                            Объекты
-                            </h3>
+                            <h3 class="panel-title">Объекты</h3>
                         </div>
                         <div class="panel-body">
-                            <select class="list" size="5" id="List1" onclick="refreshAttr();">
-                            </select>
-                        </div>
-                    </div>
-                    <div class="selects panel panel-default">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">
-                            Атрибуты
-                            </h3>
-                        </div>
-                        <div class="panel-body">
-                            <select class="list" size="5" id="List2">
-                            </select>
+                            <select class="list" size="5" id="relationList" onclick=""></select>
                         </div>
                     </div>
                 </div>
-
                 <div class="gorizont">
                     <div class="inputs panel panel-default">
-                       <div style="background-color: #fff; padding: 0;" class="panel-heading">
-                        <textarea class="textareas" id="wordTextBox" cols="30" rows="2" ></textarea>
+                        <div style="background-color: #fff; padding: 0; float:left;" class="panel-heading">
+                            <textarea class="textareas" id="relationTextBox" cols="25" rows="1" ></textarea>
                         </div>
                         <div style="padding:0;" class="panel-body">
-                        <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="in List" onclick="addObj();">
-                        </div>
-                    </div>
-                    <div class="inputs panel panel-default">
-                       <div style="background-color: #fff; padding: 0;" class="panel-heading">
-                        <textarea class="textareas" id="attrBox" cols="30" rows="2" ></textarea>
-                        </div>
-                        <div style="padding:0;" class="panel-body">
-                        <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="AttrInList" onclick="addAttr();">
+                            <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="Добавить" onclick="">
                         </div>
                     </div>
                 </div>
-            </div>-->
+            </div>
+            <div id="er-obj-container" class="objects-attr-container"  name="objContainer">
+
+            </div>
+            <div id="ip-obj-container" class="objects-attr-container"  name="objContainer">
+
+            </div>
+            <div id="statistic-obj-container" class="objects-attr-container"  name="objContainer">
+
+            </div>
+            <div id="otchet-obj-container" class="objects-attr-container"  name="objContainer">
+
+            </div>
+            <div id="az-obj-container" class="objects-attr-container"  name="objContainer">
+
+            </div>
+            <div id="oc-obj-container" class="objects-attr-container"  name="objContainer">
+
+            </div>
         </div>
         <div class="right-div">
             <div id="div1" name="contentDiv" ng-controller="UseCaseController">
