--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -80,7 +80,7 @@
         <div>
             <div id="pages-container" class="pages-container"></div>
             <div id="objects-attribute-container" name="objContainer">
-                <div class="gorizont">
+                   <div class="gorizont" style="height:61%!important;">
                     <div class="selects panel panel-default">
                     <!--<div class="panel-heading">
                             <h3 class="panel-title">Объекты</h3>
