--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -80,7 +80,7 @@
         <div>
             <div id="pages-container" class="pages-container"></div>
             <div id="objects-attribute-container" name="objContainer">
-                   <div class="gorizont" style="height:61%!important;">
+                   <div class="gorizont objects-attr-list">
                     <div class="selects panel panel-default">
                     <!--<div class="panel-heading">
                             <h3 class="panel-title">Объекты</h3>
@@ -104,7 +104,7 @@
                             <textarea class="textareas" id="wordTextBox" cols="25" rows="1" ng-model="objec.name"></textarea>
                         </div>
                         <div style="padding:0;" class="panel-body">
-                            <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="in List" ng-click="create(objec)"; objec='';>
+                            <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="Добавить" ng-click="create(objec)"; objec='';>
                         </div>
                     </div>
                     <div class="inputs panel panel-default">
@@ -112,7 +112,7 @@
                             <textarea class="textareas" id="attrBox" cols="25" rows="1" ></textarea>
                         </div>
                         <div style="padding:0;" class="panel-body">
-                            <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="AttrInList" onclick = "addAttr()">
+                            <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="Добавить" onclick = "addAttr()">
                         </div>
                     </div>
                 </div>
