--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -118,8 +118,8 @@
                 </div>
             </div>
             <div id="relation-obj-container"  name="objContainer">
-                <div class="gorizont">
-                    <div class="selects panel panel-default">
+                <div class="gorizont objects-attr-list">
+                    <div class="selects panel panel-default" style="width:100%!important;">
                     <!--<div class="panel-heading">
                             <h3 class="panel-title">Объекты</h3>
                         </div>-->
@@ -140,7 +140,7 @@
                 </div>
             </div>
             <div id="er-obj-container"  name="objContainer">
-                <div class="gorizont">
+                <div class="gorizont objects-attr-list">
                     <div class="selects panel panel-default">
                     <!--<div class="panel-heading">
                             <h3 class="panel-title">Объекты</h3>
